# Context_Engineering

./: .env.example  .gitignore  README.md  env.example  env.sample  pyproject.toml
chapter_0_deepagent/: simple_deepagent.py
chapter_1_prompt_tuning/: deepagent_with_prompt.py
chapter_2_agents.md/: agent_with_md.py
chapter_3_skills/: agent.py
chapter_4_dynamic_prompt/: agent.py
chapter_4_dynamic_prompt/skills/python-review/: SKILL.md
chapter_5_offload/: AGENTS.md  agent.py  example.py
chapter_5_offload/skills/github-review/: SKILL.md
chapter_6_capstone/: AGENTS.md  agent.py  utils.py
