[project]
name = "context-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.31",
    "langchain-groq>=1.1.2",
    "langchain-google-genai>=2.0.0",
    "pygithub>=2.9.1",
    "tiktoken>=0.12.0",
]
